--- a/src/components/explanation/explanation.scss
+++ b/src/components/explanation/explanation.scss
@@ -1,13 +1,44 @@
-.explanation{
+.explanation {
+  background: linear-gradient(45deg, #ffe65b 0%, #9cfff8 100%);
+  .hobby{
     display: flex;
-    flex-direction: column;
-    .mbtiDetails{
-        height: 315px;
-        width: 100%;
-        border: 1px solid black;
-        text-align: center;
-        font-size: 24px;
-        font-weight: 400;
-        margin-top: 90px;
+    flex-direction:column;
+    .hobbyExamples{
+      font-weight: 700;
+      gap: 10px;
+      margin-top: 25px;
+      span{
+        background-color: #fff9b6;
+        border-radius: 10px;
+        gap: 10px;
+        padding: 8px;
+        font-weight: 1000;
+      }
     }
+  }
+  .mbti {
+    span {
+      font-size: 35px;
+      font-weight: 600;
+    }
+    border-radius: 10px;
+    .mbtiGrid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+
+      .traitPair {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .trait {
+        font-size: 24px;
+        color: #262626;
+        font-weight: 400;
+      }
+    }
+  }
 }
