--- a/src/components/quizInside/quizInside.scss
+++ b/src/components/quizInside/quizInside.scss
@@ -1,10 +1,10 @@
 .qA {
   max-width: 600px;
   margin: 0 auto;
-  padding: 20px;
-  background-color: #ffe550;
-  border-radius: 10px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2), 10px 4px 12px rgba(0, 0, 0, 0.2);
+  background: #a4e079;
+  border-radius: 12px;
 
   h2 {
     font-size: 24px;
@@ -23,7 +23,7 @@
     color: #333;
 
     &:hover {
-      background-color: #aeffd1;
+      background-color: #fff574;
     }
   }
 
@@ -36,22 +36,17 @@
   }
 
   li.selected {
-    pointer-events: none; 
+    pointer-events: none;
   }
 
   div {
     display: flex;
-    justify-content: center;
-    align-items: center; 
-    padding: 10px; 
-    font-size: 35px;
-    font-weight: 500;
-    color: #5a4cd7;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.8),
-      0 2px 4px rgba(0, 0, 0, 0.2), 
-      0 3px 6px rgba(232, 232, 232, 0.802), 
-      0 5px 5px rgba(212, 211, 211, 0.932); 
+    padding: 9px 4.5px;
+    font-size: 25px;
+    font-weight: 600;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.9), 0 2px 4px rgba(0, 0, 0, 0.2);
     font-family: "Play";
+    color: #4c36b8;
     flex-direction: column;
   }
 }
